html fix and text align commercial

--- a/styles.css
+++ b/styles.css
@@ -71,6 +71,10 @@ p {
   font-style: italic;
 }
 
+.center-text {
+  text-align: center;
+}
+
 /* INDEX PAGE */
 #index {
   display: flex;
